--- a/package.json
+++ b/package.json
@@ -1,5 +1,5 @@
 {
-  "homepage" : "https://github.com/Vishesh-Tripathi/Todo-Webapp",
+  "homepage" : "https://Vishesh-Tripathi.github.io/Todo-Webapp",
   "name": "reactrouter",
   "private": true,
   "version": "0.0.0",
